stdlib.h: Use same test for def. of lldiv_t as for decl. of lldiv(3).

The !_ANSI_SOURCE conditional was a leftover from before we had
_NETBSD_SOURCE in sys/featuretest.h already defined conditionally on
!_ANSI_SOURCE.

So just nix the !_ANSI_SOURCE part -- and while here, reorder and
reformat the conditional around lldiv_t so it matches the conditional
around lldiv(3) byte-for-byte, just to make it more obvious.

PR standards/56402: Definition of lldiv_t with ANSI_SOURCE and
POSIX_SOURCE